objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <formula>ActualCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alliance_Notes__c</fullName>
        <label>Alliance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alliance_Offer__c</fullName>
        <label>Alliance Offer</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ambassador__Ambassador_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ambassador Campaign</label>
        <referenceTo>Ambassador__Ambassador_Campaign__c</referenceTo>
        <relationshipLabel>Connected Salesforce Campaign</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignRandomPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if select Partner Randomly</inlineHelpText>
        <label>Paid Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended_By__c</fullName>
        <label>Attended By</label>
        <picklist>
            <picklistValues>
                <fullName>SunPower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower and Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bright Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <inlineHelpText>Identify the Business Unit this campaign is for or identify the primary target of the campaign. We understand that campaigns can have benefits beyond the primary BU but use your best judgement</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Intl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPP Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPP Intl</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Goal__c</fullName>
        <description>Select the Campaign Goal</description>
        <inlineHelpText>Identify the primary objective of the campaign; faciliates reporting and planning purposes</inlineHelpText>
        <label>Campaign Goal</label>
        <picklist>
            <picklistValues>
                <fullName>Brand Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Engagement</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Please use this format &quot;Year_Region_BU_CampName&quot; 
(e.g. 2009_NA_Res_NTS); each campaign name must be unique in the global CRM system</inlineHelpText>
        <label>Campaign ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Landing_Page__c</fullName>
        <label>Campaign Landing Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Target_Audience__c</fullName>
        <inlineHelpText>Describe the target or main audience</inlineHelpText>
        <label>Campaign Target Audience</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_flyers_rebate_forms_etc__c</fullName>
        <label>Collateral (flyers, rebate forms, etc)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Cell_Phone__c</fullName>
        <label>Contact Cell Phone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Fax__c</fullName>
        <label>Contact Fax</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Office_Phone__c</fullName>
        <label>Contact Office Phone</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Form_Name__c</fullName>
        <label>Eloqua Form Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Leads__c</fullName>
        <inlineHelpText>Total number of planned leads to be generated</inlineHelpText>
        <label>Expected Leads</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Leads_percentage__c</fullName>
        <inlineHelpText>Expected lead generation rate (%) based on the campaign&apos;s target</inlineHelpText>
        <label>Expected Leads (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Opportunity_percentage__c</fullName>
        <inlineHelpText>Expected conversion rate (%) of this campaign&apos;s leads</inlineHelpText>
        <label>Expected Opportunity (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Five9__Five9CallNow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets Five9 callNowMode to &apos;ANY&apos;</description>
        <inlineHelpText>All new campaign members are added to Five9 list with &apos;call now mode&apos; set to &apos;ANY&apos;</inlineHelpText>
        <label>Five9 Call Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Endpoint__c</fullName>
        <label>Five9 WS Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Five9__Five9Password__c</fullName>
        <label>Five9 User Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Five9__Five9ReportEmail__c</fullName>
        <label>Five9 Report Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Five9__Five9User__c</fullName>
        <label>Five9 User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Five9__Five9list__c</fullName>
        <description>Five9 dialing list name</description>
        <label>Five9list</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Country__c</fullName>
        <label>HQ Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lebanon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HQ_Primary_Address__c</fullName>
        <label>HQ/Primary Address</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Primary_City__c</fullName>
        <label>HQ/Primary City</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Primary_State__c</fullName>
        <label>HQ/Primary State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HQ_Primary_Zip_Code__c</fullName>
        <label>HQ/Primary Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Primary_address_2__c</fullName>
        <label>HQ/Primary address 2</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Vertical__c</fullName>
        <inlineHelpText>Identify the Vertical or Industry this campaign is targeting; this will faciliate reporting of results and performance</inlineHelpText>
        <label>Industry/Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture &amp; Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homebuilder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels &amp; Resorts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics &amp; Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <label>Integration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landing_Page_Live__c</fullName>
        <label>Landing Page Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <description>Launch Date</description>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Generation_fee__c</fullName>
        <label>Lead Generation fee</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Handling_fee__c</fullName>
        <description>Typically $35 unless a lead generation fee exists.</description>
        <inlineHelpText>Typically $35 unless a lead generation fee exists.</inlineHelpText>
        <label>Lead Handling fee</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Description__c</fullName>
        <inlineHelpText>Describe any restrictions around this list if it is purchased (e.g. one use only, no email, etc.)</inlineHelpText>
        <label>List Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Program_Overview_Conducted__c</fullName>
        <label>Meeting/Program Overview Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NH_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NH Community</label>
        <referenceTo>NH_Community__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Leads__c</fullName>
        <formula>NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Leads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office/Location</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability %</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>95</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Communicated_to_Employee_Members__c</fullName>
        <label>Program Communicated to Employee/Members</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <inlineHelpText>Specify a unique promo code or if this a campaign rolled over from SPOTS then the old SPOTS Campaign ID is located in this field</inlineHelpText>
        <label>Promo Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the associated Leads/Opportunities should be sent to the Retail organization which provided the Lead via an in-store Lead generation program.</description>
        <inlineHelpText>Determines whether the associated Leads/Opportunities should be sent to the Retail organization which provided the Lead via an in-store Lead generation program.</inlineHelpText>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RLC_Type__c</fullName>
        <description>This is dependent pick list when &quot;RLC&quot; is selected in Business Unit field.</description>
        <inlineHelpText>This is dependent pick list when &quot;RLC&quot; is selected in Business Unit field.</inlineHelpText>
        <label>RLC Type</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Homes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Form_URL__c</fullName>
        <label>Rebate Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <picklist>
            <picklistValues>
                <fullName>Cold Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Henry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doug Richards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend or Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marty Neese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Werner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_Lead_Pre_Qualification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used by ALR process to determine if leads associated to the campaign require pre-qualification (appointment commitment) before conversion. SPD Release 2 5-29-2015 - Crystal, RedPoint</description>
        <inlineHelpText>Designates that lead will be routed to Five9 for qualification to warm transfer or set an appointment before conversion.</inlineHelpText>
        <label>Requires Lead Pre-Qualification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <description>Retail organization for Campaigns associated with in-store Lead generation programs.</description>
        <inlineHelpText>Retail organization for Campaigns associated with in-store Lead generation programs.</inlineHelpText>
        <label>Retailer</label>
        <picklist>
            <picklistValues>
                <fullName>OSH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <label>SLA Type</label>
        <picklist>
            <picklistValues>
                <fullName>45 Minutes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Business Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SME__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SME</description>
        <label>SME</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <label>Sales Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sold out/past cutoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not open/sales not started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude - Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Agreement_Provided__c</fullName>
        <label>Service Agreement Provided</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Agreement_Signed__c</fullName>
        <label>Service Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>SPD: Jackie asked to create this field to show the value to Solar advisors on their five9 softphone layout</description>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Conducted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page/Flyer Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Activation Mode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <description>Status Update</description>
        <label>Status Update</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Office_Locations__c</fullName>
        <label>Sub Office/Locations</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>